tests/wpt/tests/third_party/test262/test/language/import/import-defer/errors/get-other-while-evaluating/dep_FIXTURE.js
// Copyright (C) 2024 Igalia, S.L. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

import defer * as main from "./main.js";

try {
  main.foo;
} catch (error) {
  globalThis["error on main.foo"] = error;
}
